# dataset-boites

./: -README copy.md  -docker-compose copy 2.yml  -test-airflow-docker-compose.yml  .env  .gitignore  .~lock.Rapport Databox- OLAVAUD.odt#  HELP.md  LICENCE.MD  MLD.dbml  README-ALL.md  README.md  Rapport Databox- OLAVAUD.odt  docker-compose-config-complete.yml  docker-compose-config-dev.yml  docker-compose-config-standard.yml  docker-compose.yml  dockerfile  hello.py  old-docker-compose copy 2.yml  old-docker-compose copy.yml  pyproject.toml
app/: Dockerfile  app copy.py  app.py
db/: Dockerfile
docs/: databox.uml
services/airflow/: -docker-compose-2.yml  Dockerfile  docker-compose.yml  init-airflow.sh
services/airflow/dags/: test_postgres_dag.py
services/dashboard/: Dockerfile  app.py  docker-compose.yml
services/gradio_sql/: --.env  docker-compose.yml  requirements.txt
services/gradio_sql/versions/: connect copy 2.py  connect copy.py  main copy 2.py  main copy 3.py  main copy.py
services/grafana/: docker-compose.yml
services/postgres/: docker-compose.yml
services/postgres/sql/: databox copy.sql  databox.sql  databox_2.sql  view.sql
services/superset/: Dockerfile  docker-compose.yml
sql/: check.sql  databox.sql  init.sql
